--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyhow   = "1.0"
-form     = "0.8"
-svd2rust = "0.21"
-svdtools = "0.2"
-toml     = "0.5"
+anyhow       = "1.0"
+clap         = { version = "3.0", features = ["derive"] }
+form         = "0.8"
+strum        = "0.23"
+strum_macros = "0.23"
+svd2rust     = "0.21"
+svdtools     = "0.2"
+toml         = "0.5"
