--- a/esp32s3/Cargo.toml
+++ b/esp32s3/Cargo.toml
@@ -27,15 +27,10 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 bare-metal = "1.0"
 vcell = "0.1"
-xtensa-lx = "0.4"
-
-[dependencies.xtensa-lx-rt]
-git = "https://github.com/esp-rs/xtensa-lx-rt.git"
-branch = "unify-xtensa-asm"
-features = ["lx6"]
-optional = true
+xtensa-lx = "0.6.0"
+xtensa-lx-rt = { version = "0.8.0", optional = true }
 
 [features]
 # NOTE: these features will need to be updated when support for LX7 is added.
-default = ["xtensa-lx/lx6"]
-rt = ["xtensa-lx-rt/lx6"]
+default = ["xtensa-lx/esp32"]
+rt = ["xtensa-lx-rt/esp32"]
