--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -31,3 +31,12 @@ IO_MUX:
       - U0TXD
       - U0RXD
       - SPICLK
+
+INTERRUPT:
+  _modify:
+    "PRO_INTR_STATUS_REG_0":
+      name: "PRO_INTR_STATUS_0"
+    "PRO_INTR_STATUS_REG_1":
+      name: "PRO_INTR_STATUS_1"
+    "PRO_INTR_STATUS_REG_2":
+      name: "PRO_INTR_STATUS_2"
