--- a/esp32s3/Cargo.toml
+++ b/esp32s3/Cargo.toml
@@ -29,9 +29,9 @@ license = "MIT OR Apache-2.0"
 bare-metal = "1.0"
 vcell = "0.1"
 xtensa-lx = "0.6.0"
-xtensa-lx-rt = { version = "0.8.0", optional = true }
+xtensa-lx-rt = { version = "0.9.0", optional = true }
 
 [features]
 # NOTE: these features will need to be updated when support for LX7 is added.
 default = ["xtensa-lx/esp32"]
-rt = ["xtensa-lx-rt/esp32"]
+rt = ["xtensa-lx-rt/esp32s3"]
