--- a/esp32/Cargo.toml
+++ b/esp32/Cargo.toml
@@ -2,11 +2,16 @@
 name = "esp32"
 version = "0.11.0"
 authors = ["Scott Mabin <scott@mabez.dev>", "Arjan Mels <arjan@mels.email>"]
-edition = "2018"
-readme = "README.md"
-repository = "https://github.com/esp-rs/esp32"
+edition = "2021"
+rust-version = "1.58"
+repository = "https://github.com/esp-rs/esp-pacs"
 description = "Peripheral access crate for the ESP32"
-keywords = ["no-std", "esp32", "wifi", "embedded"]
+keywords = [
+    "embedded",
+    "esp32",
+    "no-std",
+    "wifi",
+]
 categories = [
     "embedded",
     "hardware-support",
@@ -15,7 +20,7 @@ categories = [
 include = [
     "src/**",
     "build.rs",
-    "device.x"
+    "device.x",
 ]
 license = "MIT OR Apache-2.0"
 
