--- a/esp32s2/Cargo.toml
+++ b/esp32s2/Cargo.toml
@@ -2,7 +2,8 @@
 name = "esp32s2"
 version = "0.1.0"
 authors = ["Jesse Braham <jesse@beta7.io>"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.58"
 readme = "README.md"
 repository = "https://github.com/esp-rs/esp32s2"
 description = "Peripheral access crate for the ESP32-S2"
