--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        chip: [esp32, esp32s2, esp32s3]
+        chip: [esp32, esp32s2, esp32s3, esp8266]
     steps:
       - uses: actions/checkout@v2
       - uses: esp-rs/xtensa-toolchain@v1
