--- a/esp32c3/Cargo.toml
+++ b/esp32c3/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 description = "Peripheral access crate for the ESP32-C3"
 documentation = "https://docs.rs/esp32c3/"
 readme = "README.md"
-repository = "https://github.com/esp-rs/esp32c3"
+repository = "https://github.com/esp-rs/esp-pacs"
 license = "MIT OR Apache-2.0"
 keywords = [
     "no-std",
