--- a/esp32s2/Cargo.toml
+++ b/esp32s2/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jesse Braham <jesse@beta7.io>"]
 edition = "2021"
 rust-version = "1.58"
 readme = "README.md"
-repository = "https://github.com/esp-rs/esp32s2"
+repository = "https://github.com/esp-rs/esp-pacs"
 description = "Peripheral access crate for the ESP32-S2"
 keywords = [
     "embedded",
@@ -32,6 +32,5 @@ xtensa-lx = "0.6.0"
 xtensa-lx-rt = { version = "0.9.0", optional = true }
 
 [features]
-# NOTE: these features will need to be updated when support for LX7 is added.
 default = ["xtensa-lx/esp32"]
 rt = ["xtensa-lx-rt/esp32s2"]
