Patches to align I2C peripherals

--- a/esp32c3/svd/patches/esp32c3.yaml
+++ b/esp32c3/svd/patches/esp32c3.yaml
@@ -3,3 +3,13 @@ _svd: ../esp32c3.base.svd
 RTC_CNTL:
   _strip:
     - "RTC_"
+
+SYSTEM:
+  PERIP_CLK_EN0:
+    _modify:
+      EXT0_CLK_EN:
+        name: I2C_EXT0_CLK_EN
+  PERIP_RST_EN0:
+    _modify:
+      EXT0_RST:
+        name: I2C_EXT0_RST
