--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -1,1 +1,34 @@
 _svd: ../esp32.base.svd
+
+I2C0:
+  _add:
+    DATA:
+      addressOffset: 0x1c
+      access: read
+      size: 32
+      fields:
+        FIFO_RDATA:
+          access: read
+          description: The register represent the byte data read from rxfifo when use apb fifo access
+          bitOffset: 0
+          bitWidth: 8
+
+DPORT:
+  PERIP_RST_EN:
+    _delete:
+      - PERIP_RST
+    _add:
+      I2C0_EXT0_RST:
+        description: Reset Bit I2C0 Peripheral
+        bitOffset: 7
+        bitWidth: 1
+        access: read-write
+  PERIP_CLK_EN:
+    _delete:
+      - PERIP_CLK_EN
+    _add:
+      I2C0_EXT0_CLK_EN:
+        description: Enable Bit for I2C0 Peripheral
+        bitOffset: 7
+        bitWidth: 1
+        access: read-write
