--- a/esp8266/Cargo.toml
+++ b/esp8266/Cargo.toml
@@ -1,22 +1,41 @@
 [package]
 name = "esp8266"
-version = "0.3.0"
-description = "A minimal peripheral access crate the ESP8266"
-authors = ["Robin Appelman <robin@icewind.nl>"]
-edition = "2018"
+version = "0.5.0"
+authors = [
+    "Robin Appelman <robin@icewind.nl>",
+    "Jesse Braham <jesse@beta7.io>",
+]
+edition = "2021"
+readme = "README.md"
 repository = "https://github.com/esp-rs/esp-pacs"
+description = "Peripheral access crate for the ESP8266"
+keywords = [
+    "embedded",
+    "esp8266",
+    "no-std",
+    "wifi",
+]
+categories = [
+    "embedded",
+    "hardware-support",
+    "no-std",
+]
+include = [
+    "/src/**",
+    "build.rs",
+    "device.x",
+]
 license = "MIT OR Apache-2.0"
-include = ["/src/**"]
 
 [dependencies]
-bare-metal = "1.0.0"
-vcell = "0.1.3"
+bare-metal = "1.0"
+vcell = "0.1"
 xtensa-lx = "0.6.0"
 xtensa-lx-rt = { version = "0.9.0", optional = true }
 
 [features]
-default = []
-rt = ["xtensa-lx-rt"]
+default = ["xtensa-lx/esp8266"]
+rt = ["xtensa-lx-rt/esp8266"]
 
 [profile.dev]
 lto = false
