Align SPI related registers

--- a/esp32c3/svd/patches/esp32c3.yaml
+++ b/esp32c3/svd/patches/esp32c3.yaml
@@ -45,3 +45,9 @@ RNG:
       access: read-only
       addressOffset: 0xb0
       size: 0x20
+
+SPI2:
+  CMD:
+    _modify:
+      UPDATE:
+        access: read-write
