--- a/esp32s2/Cargo.toml
+++ b/esp32s2/Cargo.toml
@@ -32,5 +32,5 @@ xtensa-lx = "0.7.0"
 xtensa-lx-rt = { version = "0.11.0", optional = true }
 
 [features]
-default = ["xtensa-lx/esp32"]
+default = ["xtensa-lx/esp32s2"]
 rt = ["xtensa-lx-rt/esp32s2"]
