--- a/esp32c3/svd/patches/esp32c3.yaml
+++ b/esp32c3/svd/patches/esp32c3.yaml
@@ -11,3 +11,25 @@ INTERRUPT_CORE0:
         value: 52
       SW_INTR_3:
         value: 53
+      WIFI_MAC:
+       value: 0
+      WIFI_MAC_NMI:
+       value: 1
+      WIFI_PWR:
+       value: 2
+      WIFI_BB:
+       value: 3
+      BT_MAC:
+       value: 4
+      BT_BB:
+       value: 5
+      BT_BB_NMI:
+       value: 6
+      RWBT:
+       value: 7
+      RWBLE:
+       value: 8
+      RWBT_NMI:
+       value: 9
+      RWBLE_NMI:
+       value: 10
