--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -34,3 +34,18 @@ TWAI:
     _interrupts:
       CAN:
         name: TWAI
+
+RTCIO:
+  _modify:
+    RTC_GPIO_ENABLE_W1TC:
+      name: ENABLE_W1TC
+    "RTC_GPIO_PIN%s":
+      name: "PIN%s"
+  "PIN%s":
+    _modify:
+      GPIO_PIN0_PAD_DRIVER:
+        name: PIN_PAD_DRIVER
+  ENABLE_W1TC:
+    _modify:
+      REG_RTCIO_REG_GPIO_ENABLE_W1TC:
+        name: ENABLE_W1TC
