--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
           target: riscv32imc-unknown-none-elf
           toolchain: nightly
           default: true
+          components: rust-src
       - uses: Swatinem/rust-cache@v1
       - uses: actions-rs/cargo@v1
         with:
