--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        chip: [esp32c3]
+        chip: [esp32c2, esp32c3]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
