--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -4,25 +4,25 @@ DPORT:
   _add:
     _interrupts:
       WIFI_MAC:
-       value: 0
+        value: 0
       WIFI_NMI:
-       value: 1
+        value: 1
       WIFI_BB:
-       value: 2
+        value: 2
       BT_MAC:
-       value: 3
+        value: 3
       BT_BB:
-       value: 4
+        value: 4
       BT_BB_NMI:
-       value: 5
+        value: 5
       RWBT:
-       value: 6
+        value: 6
       RWBLE:
-       value: 7
+        value: 7
       RWBT_NMI:
-       value: 8
+        value: 8
       RWBLE_NMI:
-       value: 9
+        value: 9
 
 TIMG0:
   "T0*":
@@ -40,133 +40,74 @@ TIMG1:
       - "T0_"
 
 LEDC:
+  _array:
+    "HSCH*_CONF0": {}
+    "HSCH*_HPOINT": {}
+    "HSCH*_DUTY": {}
+    "HSCH*_CONF1": {}
+    "HSCH*_DUTY_R": {}
+    "LSCH*_CONF0": {}
+    "LSCH*_HPOINT": {}
+    "LSCH*_DUTY": {}
+    "LSCH*_CONF1": {}
+    "LSCH*_DUTY_R": {}
+    "HSTIMER*_CONF": {}
+    "HSTIMER*_VALUE": {}
+    "LSTIMER*_CONF": {}
+    "LSTIMER*_VALUE": {}
+
+  "*":
+    _strip_end:
+      - "_HSCH0"
+      - "_LSCH0"
+
+  "HSCH0_CONF0":
+    _delete: "CLK_EN"
+
+  "HSCH*_DUTY_R":
+    _add:
+      DUTY_R:
+        description: "This register represents the current duty cycle of the output signal for high-speed channel %s"
+        bitOffset: 0
+        bitWidth: 25
+        access: read-only
+
   _modify:
-    _registers:
-      HSCH0_DUTY:
-        access: read-write
-        fields:
-          DUTY_HSCH0:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      HSCH1_DUTY:
-        access: read-write
-        fields:
-          DUTY_HSCH1:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      HSCH2_DUTY:
-        access: read-write
-        fields:
-          DUTY_HSCH2:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      HSCH3_DUTY:
-        access: read-write
-        fields:
-          DUTY_HSCH3:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      HSCH4_DUTY:
-        access: read-write
-        fields:
-          DUTY_HSCH4:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      HSCH5_DUTY:
-        access: read-write
-        fields:
-          DUTY_HSCH5:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      HSCH6_DUTY:
-        access: read-write
-        fields:
-          DUTY_HSCH6:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      HSCH7_DUTY:
-        access: read-write
-        fields:
-          DUTY_HSCH7:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      LSCH0_DUTY:
-        access: read-write
-        fields:
-          DUTY_LSCH0:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      LSCH1_DUTY:
-        access: read-write
-        fields:
-          DUTY_LSCH1:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      LSCH2_DUTY:
-        access: read-write
-        fields:
-          DUTY_LSCH2:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      LSCH3_DUTY:
-        access: read-write
-        fields:
-          DUTY_LSCH3:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      LSCH4_DUTY:
-        access: read-write
-        fields:
-          DUTY_LSCH4:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      LSCH5_DUTY:
-        access: read-write
-        fields:
-          DUTY_LSCH5:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      LSCH6_DUTY:
-        access: read-write
-        fields:
-          DUTY_LSCH6:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-      LSCH7_DUTY:
-        access: read-write
-        fields:
-          DUTY_LSCH7:
-            bitOffset: 0
-            bitWidth: 25
-            access: read-write
-  LSTIMER0_CONF:
+    "HSCH*_DUTY":
+      access: read-write
+
+  "HSCH*_DUTY":
     _modify:
-      DIV_NUM_LSTIMER0:
-        name: CLK_DIV_LSTIMER0
-  LSTIMER1_CONF:
+      DUTY:
+        access: read-write
+
+  _modify:
+    "LSCH*_DUTY":
+      access: read-write
+
+  "LSCH*_DUTY":
     _modify:
-      DIV_NUM_LSTIMER1:
-        name: CLK_DIV_LSTIMER1
-  LSTIMER2_CONF:
-    _modify:
-      DIV_NUM_LSTIMER2:
-        name: CLK_DIV_LSTIMER2
-  LSTIMER3_CONF:
-    _modify:
-      DIV_NUM_LSTIMER3:
-        name: CLK_DIV_LSTIMER3
+      DUTY:
+        access: read-write
+
+  "LSCH*_DUTY_R":
+    _add:
+      DUTY_R:
+        description: "This register represents the current duty cycle of the output signal for low-speed channel %s"
+        bitOffset: 0
+        bitWidth: 25
+        access: read-only
+
+  "HSTIMER*_CONF":
+    _strip: "HSTIMER0_"
+    _strip_end: "_HSTIMER0"
+
+  "HSTIMER*_VALUE":
+    _strip: "HSTIMER0_"
+
+  "LSTIMER*_CONF":
+    _strip: "LSTIMER0_"
+    _strip_end: "_LSTIMER0"
+
+  "LSTIMER*_VALUE":
+    _strip: "LSTIMER0_"
