--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -5,16 +5,15 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyhow       = "1.0"
-env_logger   = "0.9"
-form         = "0.10"
-log          = "0.4"
-strum        = "0.24"
-strum_macros = "0.24"
-svd2rust     = "0.25"
-svdtools     = "0.2"
-toml         = "0.5"
+anyhow     = "1.0"
+env_logger = "0.9"
+form       = "0.10"
+log        = "0.4"
+strum      = { version = "0.24", features = ["derive"] }
+svd2rust   = "0.25"
+svdtools   = "0.2"
+toml       = "0.5"
 
 [dependencies.clap]
-version  = "3.1"
+version  = "4.0"
 features = ["derive"]
