--- a/esp32c2/Cargo.toml
+++ b/esp32c2/Cargo.toml
@@ -26,10 +26,10 @@ include = [
 ]
 
 [dependencies]
-bare-metal = "1.0"
-riscv = "0.9"
-riscv-rt = { version = "0.9", optional = true }
-vcell = "0.1"
+critical-section = { version = "1.1.1", optional = true }
+riscv = "0.9.0"
+riscv-rt = { version = "0.9.0", optional = true }
+vcell = "0.1.3"
 
 [features]
 default = []
