--- a/esp32c3/Cargo.toml
+++ b/esp32c3/Cargo.toml
@@ -29,7 +29,7 @@ include = [
 ]
 
 [dependencies]
-bare-metal = "1.0.0"
+critical-section = { version = "1.1.1", optional = true }
 riscv = "0.9.0"
 riscv-rt = { version = "0.9.0", optional = true }
 vcell = "0.1.3"
