--- a/esp8266/Cargo.toml
+++ b/esp8266/Cargo.toml
@@ -28,8 +28,8 @@ include = [
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-bare-metal = "1.0"
-vcell = "0.1"
+critical-section = { version = "1.1.1", optional = true }
+vcell = "0.1.3"
 xtensa-lx = "0.7.0"
 xtensa-lx-rt = { version = "0.13.0", optional = true }
 
