--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -5,15 +5,12 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyhow     = "1.0"
-env_logger = "0.9"
-form       = "0.10"
-log        = "0.4"
-strum      = { version = "0.24", features = ["derive"] }
-svd2rust   = "0.25"
-svdtools   = "0.2"
-toml       = "0.5"
-
-[dependencies.clap]
-version  = "4.0"
-features = ["derive"]
+anyhow     = "1.0.65"
+clap       = { version = "4.0.17", features = ["derive"] }
+env_logger = "0.9.1"
+form       = "0.10.0"
+log        = "0.4.17"
+strum      = { version = "0.24.1", features = ["derive"] }
+svd2rust   = "0.26.0"
+svdtools   = "0.2.7"
+toml       = "0.5.9"
