--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -1,1 +1,28 @@
 _svd: ../esp32s3.base.svd
+
+APB_SARADC:
+  _strip: "APB_ADC_"
+
+SENS:
+  "SAR_MEAS1_MUX":
+    _strip: "SAR_"
+  "SAR_MEAS1_CTRL2":
+    _strip: "SAR_"
+  "SAR_ATTEN2":
+    _strip: "SAR_"
+  "SAR_MEAS2_MUX":
+    _strip: "SAR_"
+  "SAR_MEAS2_CTRL2":
+    _strip: "SAR_"
+  "SAR_HALL_CTRL":
+    _strip: "SAR_"
+  "SAR_PERI_CLK_GATE_CONF":
+    _strip: "SAR_"
+  "SAR_POWER_XPD_SAR":
+    _strip: "SAR_"
+  "SAR_MEAS1_CTRL1":
+    _strip: "SAR_"
+  "SAR_AMP_CTRL3":
+    _strip: "SAR_"
+  "SAR_ATTEN1":
+    _strip: "SAR_"
