Apply patches to `esp32` and `esp32s3` packages (#58)
* Add patches for SHA peripheral on ESP32

* Add patches for MCPWM peripheral on ESP32-S3

* Bump versions for `esp32` and `esp32s3` packages

* Patch TWAI peripheral for ESP32

* Patch TWAI peripheral for ESP32-S3

--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -1,1 +1,26 @@
 _svd: ../esp32.base.svd
+
+SHA:
+  SHA1_BUSY:
+    _modify:
+      SHA*_BUSY:
+        access: read-only
+
+  _modify:
+    SHA1_CONTINUE:
+      addressOffset: 0x84
+    SHA256_LOAD:
+      addressOffset: 0x98
+    "TEXT_%s":
+      name: "TEXT%s"
+
+  "TEXT%s":
+    _modify:
+      TEXT:
+        bitWidth: 32
+
+TWAI:
+  DATA_*:
+    _modify:
+      TX_BYTE_*:
+        access: read-write
