--- a/esp32c3/svd/patches/esp32c3.yaml
+++ b/esp32c3/svd/patches/esp32c3.yaml
@@ -1,1 +1,11 @@
 _svd: ../esp32c3.base.svd
+
+SYSTEM:
+  PERIP_CLK_EN0:
+    _modify:
+      CAN_CLK_EN:
+        name: TWAI_CLK_EN
+  PERIP_RST_EN0:
+    _modify:
+      CAN_RST:
+        name: TWAI_RST
