--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -74,3 +74,26 @@ TWAI:
     _modify:
       TX_BYTE_*:
         access: read-write
+
+
+"PCNT":
+  "U%s_CONF0":
+    _strip_end: "_U"
+  "U%s_CONF1":
+    _strip_end: "_U"
+  "U%s_CONF2":
+    _strip_end: "_U"
+  "U%s_CNT":
+    _modify:
+      PULSE_CNT_U:
+        name: CNT
+  CTRL:
+    _strip: "PULSE_"
+  INT_RAW:
+    _strip_end: "_INT_RAW"
+  INT_ST:
+    _strip_end: "_INT_ST"
+  INT_ENA:
+    _strip_end: "_INT_ENA"
+  INT_CLR:
+    _strip_end: "_INT_CLR"
