PCNT status register field names for esp32/esp32s2/esp32s3

--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -44,6 +44,9 @@ PCNT:
     "U?_STATUS":
       name: "U%s_STATUS"
       _strip: "STATUS_"
+      _modify:
+        CNT_MODE:
+          name: ZERO_MODE
 
   CTRL:
     _strip: "PLUS_"
