--- a/esp32c3/Cargo.toml
+++ b/esp32c3/Cargo.toml
@@ -13,7 +13,7 @@ repository = "https://github.com/esp-rs/esp-pacs"
 license = "MIT OR Apache-2.0"
 keywords = [
     "no-std",
-    "esp32-c3",
+    "esp32c3",
     "wifi",
     "embedded",
 ]
@@ -30,8 +30,8 @@ include = [
 
 [dependencies]
 critical-section = { version = "1.1.1", optional = true }
-riscv = "0.10.0"
-riscv-rt = { version = "0.10.0", optional = true }
+riscv = "0.10.1"
+riscv-rt = { version = "0.11.0", optional = true }
 vcell = "0.1.3"
 
 [features]
