--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -20,3 +20,24 @@ PMU:
     _modify:
       RXFIFO_RD_BYTE:
         access: read-write
+
+INTERRUPT_CORE0:
+  _modify:
+    _registers:
+      INT_STATUS_REG_0:
+        name: INTR_STATUS_REG_0
+      INT_STATUS_REG_1:
+        name: INTR_STATUS_REG_1
+  INTR_STATUS_REG_0:
+    _modify:
+      INT_STATUS_0:
+        name: INTR_STATUS_0
+  INTR_STATUS_REG_1:
+    _modify:
+      INT_STATUS_1:
+        name: INTR_STATUS_1
+
+INTPRI:
+  "*":
+    _strip: "CORE0_"
+  _strip: "CORE0_"
