--- a/esp32c2/Cargo.toml
+++ b/esp32c2/Cargo.toml
@@ -27,10 +27,9 @@ include = [
 
 [dependencies]
 critical-section = { version = "1.1.1", optional = true }
-riscv = "0.10.1"
-riscv-rt = { version = "0.11.0", optional = true }
+esp-riscv-rt = { version = "0.1.0", optional = true }
 vcell = "0.1.3"
 
 [features]
 default = []
-rt = ["riscv-rt"]
+rt = ["esp-riscv-rt"]
