Update `xtask` and its dependencies

--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -6,11 +6,11 @@ publish = false
 
 [dependencies]
 anyhow     = "1.0.68"
-clap       = { version = "4.0.32", features = ["derive"] }
+clap       = { version = "4.1.4", features = ["derive"] }
 env_logger = "0.10.0"
 form       = "0.10.0"
 log        = "0.4.17"
 strum      = { version = "0.24.1", features = ["derive"] }
-svd2rust   = "0.28.0"
-svdtools   = "0.2.7"
-toml       = "0.5.10"
+svd2rust   = { version = "0.28.0", default-features = false }
+svdtools   = "0.2.8"
+toml       = "0.7.0"
