ESP32-C6 patches for `DMA` and `TWAI`

--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -1,5 +1,15 @@
 _svd: "../esp32c6.base.svd"
 
+DMA:
+  "IN_INT_ENA_CH%s":
+    _strip_end: "_CH_INT_ENA"
+  "IN_INT_ST_CH%s":
+    _strip_end: "_CH_INT_ST"
+  "OUT_INT_ENA_CH%s":
+    _strip_end: "_CH_INT_ENA"
+  "OUT_INT_ST_CH%s":
+    _strip_end: "_CH_INT_ST"
+
 GPIO:
   _modify:
     _interrupts:
@@ -27,3 +37,95 @@ PCNT:
     _strip_end: "_INT_CLR"
   "U%s_CNT":
     _strip: "PULSE_"
+
+TWAI[01]:
+  MODE:
+    _modify:
+      ACCEPTANCE_FILTER_MODE:
+        name: RX_FILTER_MODE
+
+  CMD:
+    _modify:
+      TX_REQUEST:
+        name: TX_REQ
+      RELEASE_BUFFER:
+        name: RELEASE_BUF
+
+  STATUS:
+    _modify:
+      RECEIVE_BUFFER:
+        name: RX_BUF_ST
+      TRANSMIT_BUFFER:
+        name: TX_BUF_ST
+      NODE_BUS_OFF:
+        name: BUS_OFF_ST
+      MISS:
+        name: MISS_ST
+
+  BUS_TIMING_1:
+    _modify:
+      TIME_SEGMENT1:
+        name: TIME_SEG1
+      TIME_SEGMENT2:
+        name: TIME_SEG2
+      TIME_SEGMENT3:
+        name: TIME_SEG3
+      TIME_SAMPLING:
+        name: TIME_SAMP
+
+  DATA_0:
+    _modify:
+      DATA_0:
+        name: TX_BYTE_0
+  DATA_1:
+    _modify:
+      DATA_1:
+        name: TX_BYTE_1
+  DATA_2:
+    _modify:
+      DATA_2:
+        name: TX_BYTE_2
+  DATA_3:
+    _modify:
+      DATA_3:
+        name: TX_BYTE_3
+  DATA_4:
+    _modify:
+      DATA_4:
+        name: TX_BYTE_4
+  DATA_5:
+    _modify:
+      DATA_5:
+        name: TX_BYTE_5
+  DATA_6:
+    _modify:
+      DATA_6:
+        name: TX_BYTE_6
+  DATA_7:
+    _modify:
+      DATA_7:
+        name: TX_BYTE_7
+  DATA_8:
+    _modify:
+      DATA_8:
+        name: TX_BYTE_8
+  DATA_8:
+    _modify:
+      DATA_8:
+        name: TX_BYTE_8
+  DATA_10:
+    _modify:
+      DATA_10:
+        name: TX_BYTE_10
+  DATA_11:
+    _modify:
+      DATA_11:
+        name: TX_BYTE_11
+  DATA_12:
+    _modify:
+      DATA_12:
+        name: TX_BYTE_12
+
+  _modify:
+    RX_MESSAGE_COUNTER:
+      name: RX_MESSAGE_CNT
