Correct and (where necessary) add the memory blocks of the RSA peripheral

--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -164,3 +164,18 @@ LP_WDT:
     _modify:
       "LP_WDT_INT_ST":
         name: "WDT_INT_ST"
+
+RSA:
+  _modify:
+    "M_MEM*":
+      dim: 384
+      access: read-write
+    "Z_MEM*":
+      dim: 384
+      access: read-write
+    "Y_MEM*":
+      dim: 384
+      access: read-write
+    "X_MEM*":
+      dim: 384
+      access: read-write
