--- a/esp32h2/Cargo.toml
+++ b/esp32h2/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
 name = "esp32h2"
 version = "0.1.0"
-authors = ["Jesse Braham <jesse@beta7.io>"]
 edition = "2021"
+rust-version = "1.60"
 description = "Peripheral access crate for the ESP32-H2"
-documentation = "https://docs.rs/esp32h2/"
-readme = "README.md"
 repository = "https://github.com/esp-rs/esp-pacs"
 license = "MIT OR Apache-2.0"
 keywords = [
@@ -20,7 +18,7 @@ categories = [
     "no-std",
 ]
 include = [
-    "/src/**",
+    "src/**",
     "build.rs",
     "device.x"
 ]
