--- a/esp32s2/Cargo.toml
+++ b/esp32s2/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "esp32s2"
 version = "0.14.0"
-authors = ["Jesse Braham <jesse@beta7.io>"]
 edition = "2021"
 rust-version = "1.60"
-readme = "README.md"
-repository = "https://github.com/esp-rs/esp-pacs"
 description = "Peripheral access crate for the ESP32-S2"
+repository = "https://github.com/esp-rs/esp-pacs"
+license = "MIT OR Apache-2.0"
 keywords = [
     "embedded",
     "esp32s2",
@@ -19,11 +18,10 @@ categories = [
     "no-std",
 ]
 include = [
-    "/src/**",
+    "src/**",
     "build.rs",
     "device.x",
 ]
-license = "MIT OR Apache-2.0"
 
 [dependencies]
 critical-section = { version = "1.1.1", optional = true }
