--- a/esp32s3/Cargo.toml
+++ b/esp32s3/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
 name = "esp32s3"
 version = "0.17.0"
-authors = ["Jesse Braham <jesse@beta7.io>"]
 edition = "2021"
 rust-version = "1.60"
-readme = "README.md"
-repository = "https://github.com/esp-rs/esp-pacs"
 description = "Peripheral access crate for the ESP32-S3"
+repository = "https://github.com/esp-rs/esp-pacs"
+license = "MIT OR Apache-2.0"
 keywords = [
     "embedded",
-    "esp32-s3",
+    "esp32s3",
     "no-std",
     "wifi",
 ]
@@ -19,11 +18,10 @@ categories = [
     "no-std",
 ]
 include = [
-    "/src/**",
+    "src/**",
     "build.rs",
     "device.x"
 ]
-license = "MIT OR Apache-2.0"
 
 [dependencies]
 critical-section = { version = "1.1.1", optional = true }
