--- a/esp8266/Cargo.toml
+++ b/esp8266/Cargo.toml
@@ -1,14 +1,11 @@
 [package]
 name = "esp8266"
-version = "0.6.0"
-authors = [
-    "Robin Appelman <robin@icewind.nl>",
-    "Jesse Braham <jesse@beta7.io>",
-]
+version = "0.7.0"
 edition = "2021"
-readme = "README.md"
-repository = "https://github.com/esp-rs/esp-pacs"
+rust-version = "1.60"
 description = "Peripheral access crate for the ESP8266"
+repository = "https://github.com/esp-rs/esp-pacs"
+license = "MIT OR Apache-2.0"
 keywords = [
     "embedded",
     "esp8266",
@@ -21,25 +18,16 @@ categories = [
     "no-std",
 ]
 include = [
-    "/src/**",
+    "src/**",
     "build.rs",
     "device.x",
 ]
-license = "MIT OR Apache-2.0"
 
 [dependencies]
 critical-section = { version = "1.1.1", optional = true }
 vcell = "0.1.3"
-xtensa-lx = "0.7.0"
-xtensa-lx-rt = { version = "0.13.0", optional = true }
+xtensa-lx = "0.8.0"
 
 [features]
 default = ["xtensa-lx/esp8266"]
-rt = ["xtensa-lx-rt/esp8266"]
-
-[profile.dev]
-lto = false
-opt-level = 1
-
-[profile.release]
-lto = false
+rt = []
