--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -1,1 +1,72 @@
 _svd: ../esp32s3.base.svd
+
+ASSIST_DEBUG:
+  _modify:
+    CORE_0_INTERRUPT_ENA:
+      name: CORE_0_MONTR_ENA
+    CORE_0_INTERRUPT_RLS:
+      name: CORE_0_INTR_ENA 
+    CORE_0_INTERRUPT_RAW:
+      name: CORE_0_INTR_RAW
+    CORE_0_INTERRUPT_CLR:
+      name: CORE_0_INTR_CLR
+    CORE_1_INTERRUPT_ENA:
+      name: CORE_1_MONTR_ENA
+    CORE_1_INTERRUPT_RLS:
+      name: CORE_1_INTR_ENA 
+    CORE_1_INTERRUPT_RAW:
+      name: CORE_1_INTR_RAW
+    CORE_1_INTERRUPT_CLR:
+      name: CORE_1_INTR_CLR      
+  CORE_0_INTR_ENA:
+    _modify:
+      CORE_0_AREA_DRAM0_0_RD_RLS:
+        name: CORE_0_AREA_DRAM0_0_RD_INTR_ENA
+      CORE_0_AREA_DRAM0_0_WR_RLS:
+        name: CORE_0_AREA_DRAM0_0_WR_INTR_ENA
+      CORE_0_AREA_DRAM0_1_RD_RLS:
+        name: CORE_0_AREA_DRAM0_1_RD_INTR_ENA
+      CORE_0_AREA_DRAM0_1_WR_RLS:
+        name: CORE_0_AREA_DRAM0_1_WR_INTR_ENA
+      CORE_0_AREA_PIF_0_RD_RLS:
+        name: CORE_0_AREA_PIF_0_RD_INTR_ENA
+      CORE_0_AREA_PIF_0_WR_RLS:
+        name: CORE_0_AREA_PIF_0_WR_INTR_ENA
+      CORE_0_AREA_PIF_1_RD_RLS:
+        name: CORE_0_AREA_PIF_1_RD_INTR_ENA
+      CORE_0_AREA_PIF_1_WR_RLS:
+        name: CORE_0_AREA_PIF_1_WR_INTR_ENA
+      CORE_0_SP_SPILL_MIN_RLS:
+        name: CORE_0_SP_SPILL_MIN_INTR_ENA
+      CORE_0_SP_SPILL_MAX_RLS:
+        name: CORE_0_SP_SPILL_MAX_INTR_ENA
+      CORE_0_IRAM0_EXCEPTION_MONITOR_RLS:
+        name: CORE_0_IRAM0_EXCEPTION_MONITOR_INTR_ENA
+      CORE_0_DRAM0_EXCEPTION_MONITOR_RLS:
+        name: CORE_0_DRAM0_EXCEPTION_MONITOR_INTR_ENA
+  CORE_1_INTR_ENA:
+    _modify:
+      CORE_1_AREA_DRAM0_0_RD_RLS:
+        name: CORE_1_AREA_DRAM0_0_RD_INTR_ENA
+      CORE_1_AREA_DRAM0_0_WR_RLS:
+        name: CORE_1_AREA_DRAM0_0_WR_INTR_ENA
+      CORE_1_AREA_DRAM0_1_RD_RLS:
+        name: CORE_1_AREA_DRAM0_1_RD_INTR_ENA
+      CORE_1_AREA_DRAM0_1_WR_RLS:
+        name: CORE_1_AREA_DRAM0_1_WR_INTR_ENA
+      CORE_1_AREA_PIF_0_RD_RLS:
+        name: CORE_1_AREA_PIF_0_RD_INTR_ENA
+      CORE_1_AREA_PIF_0_WR_RLS:
+        name: CORE_1_AREA_PIF_0_WR_INTR_ENA
+      CORE_1_AREA_PIF_1_RD_RLS:
+        name: CORE_1_AREA_PIF_1_RD_INTR_ENA
+      CORE_1_AREA_PIF_1_WR_RLS:
+        name: CORE_1_AREA_PIF_1_WR_INTR_ENA
+      CORE_1_SP_SPILL_MIN_RLS:
+        name: CORE_1_SP_SPILL_MIN_INTR_ENA
+      CORE_1_SP_SPILL_MAX_RLS:
+        name: CORE_1_SP_SPILL_MAX_INTR_ENA
+      CORE_1_IRAM0_EXCEPTION_MONITOR_RLS:
+        name: CORE_1_IRAM0_EXCEPTION_MONITOR_INTR_ENA
+      CORE_1_DRAM0_EXCEPTION_MONITOR_RLS:
+        name: CORE_1_DRAM0_EXCEPTION_MONITOR_INTR_ENA
