[esp32h2] Align register name in `LP_WDT` peripheral

--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -18,6 +18,9 @@ LP_WDT:
     SWD_CONFIG:
       name: SWD_CONF
 
+    WPROTECT:
+      name: WDTWPROTECT
+
   INT_ST_RTC:
     _modify:
       LP_WDT_INT_ST:
