Fix INTERRUPT_CORE1 for ESP32-S3

--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -70,3 +70,7 @@ ASSIST_DEBUG:
         name: CORE_1_IRAM0_EXCEPTION_MONITOR_INTR_ENA
       CORE_1_DRAM0_EXCEPTION_MONITOR_RLS:
         name: CORE_1_DRAM0_EXCEPTION_MONITOR_INTR_ENA
+
+_modify:
+  INTERRUPT_CORE1:
+    baseAddress: 0x600C2000
